@@ -1568,7 +1568,10 @@ function host() {
 							<option value='-1'<?php if (get_request_var('host_template_id') == '-1') {?> selected<?php }?>><?php print __('Any');?></option>
 							<option value='0'<?php if (get_request_var('host_template_id') == '0') {?> selected<?php }?>><?php print __('None');?></option>
 							<?php
-							$host_templates = db_fetch_assoc('SELECT id, name FROM host_template ORDER BY name');
+							$host_templates = db_fetch_assoc('SELECT DISTINCT ht.id, ht.name
+								FROM host_template ht
+								JOIN host h ON h.host_template_id = ht.id
+								ORDER BY ht.name');
 
 							if (cacti_sizeof($host_templates)) {
 								foreach ($host_templates as $host_template) {
